made backstretch fixed

--- a/portfolio/src/components/backstretch/Backstretch.scss
+++ b/portfolio/src/components/backstretch/Backstretch.scss
@@ -11,7 +11,8 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-
+  background-attachment: fixed;
+  
   display: flex;
   justify-content: center;
   align-items: center;
